--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="header__lang">
           <a href="#" class="link header__lang header__lang_active">Ru</a>
           <a href="#" class="link header__lang">En</a>
-          
+
           <!-- Нужно исправить: языки перепутаны местами. +++Исправил-->
           <!--
             Надо исправить: 
@@ -64,7 +64,7 @@
             вашего отпуска.
           </p>
           <div class="intro__autor">
-          <!-- 
+            <!-- 
             Нужно исправить: 
             Выше я писал комментарий "На теге не может быть класс модификатора без класса блока или элемента, который этим модификатором модифицируется.", но 
             забыл добавить, что это нужно исправить по всей работе =( +++Исправил
@@ -72,41 +72,41 @@
             Сейчас пройдусь по всей работе и добавлю комментарии рядом со всеми подобными ошибками.
           -->
             <p class="intro__text-autor">
-            <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор +++Исправил-->
+              <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор +++Исправил-->
               Автор текста:
               <span class="intro__span-accent"> В.В.Пупкин</span>
             </p>
             <p class="intro__text-autor">
-            <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор +++Исправил-->
+              <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор +++Исправил-->
               Дата:<span class="intro__span-accent"> 17.06.17</span>
             </p>
           </div>
         </div>
         <ul class="intro__list">
           <li class="intro__list-text">
-          <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор +++Исправил-->
+            <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор +++Исправил-->
             Часовых поясов<span class="intro__span-accent"> 11</span>
             <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор +++Исправил-->
           </li>
           <li class="intro__list-text">
-          <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор +++Исправил-->
+            <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор +++Исправил-->
             Объектов природного наследия ЮНЕСКО
             <span class="intro__span-accent"> 12</span>
-          <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор +++Исправил-->
+            <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор +++Исправил-->
           </li>
           <li class="intro__list-text">
-          <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор +++Исправил-->
+            <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор +++Исправил-->
             Объектов культурного наследия ЮНЕСКО
             <span class="intro__span-accent"> 16</span>
             <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор +++Исправил-->
           </li>
           <li class="intro__list-text">
-          <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор +++Исправил-->
+            <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор +++Исправил-->
             Природных заповедников <span class="intro__span-accent"> 105</span>
             <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор +++Исправил-->
           </li>
           <li class="intro__list-text">
-          <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор +++Исправил-->
+            <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор +++Исправил-->
             Аэропортов <span class="intro__span-accent"> 241</span>
             <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор +++Исправил-->
           </li>
@@ -180,16 +180,16 @@
             Нужно исправить: 
             отступы между .places__place намного больше, чем в макете. +++исправил
           -->
-          <h2 class="title place__title">Куршская коса</h2>
+          <h2 class="title places__title">Куршская коса</h2>
           <!-- Нужно исправить: здесь title - это элемент блока place. А самого блока place нет =( -->
-          <div class="place__website">
-          <!-- Нужно исправить: здесь website - это элемент блока place. А самого блока place нет =( -->
-            <p class="place__website_url-heading">URL</p>
-            <a href="http://park-kosa.ru/" class="link place__website_url"
+          <div class="places__place_website">
+            <!-- Нужно исправить: здесь website - это элемент блока place. А самого блока place нет =( -->
+            <p class="places__url-heading">URL</p>
+            <a href="http://park-kosa.ru/" class="link places__url"
               >park-kosa.ru</a
             >
-            <!-- Нужно исправить: здесь website_url-heading - это модификатор элемента website, который в свою очередь является элементом блока place. А самого блока place нет =( -->
-            <!-- Нужно исправить: На теге не может быть класс модификатора без класса блока или элемента, который этим модификатором модифицируется. -->
+            <!-- Нужно исправить: здесь website_url-heading - это модификатор элемента website, который в свою очередь является элементом блока place. А самого блока place нет =( +++corrected-->
+            <!-- Нужно исправить: На теге не может быть класс модификатора без класса блока или элемента, который этим модификатором модифицируется. +++corrected-->
             <!-- Нужно исправить: по макету эта ссылка должна быть подчеркнута постоянно, а не по ховеру.+++исправил -->
           </div>
           <img src="foto/kosa.jpg" alt="Куршская коса" class="place__image" />
@@ -217,15 +217,15 @@
         </div>
 
         <div class="places__place">
-          <h2 class="title place__title">Кольский</h2>
-          <div class="place__website">
-            <p class="place__website_url-heading">URL</p>
+          <h2 class="title places__title">Кольский</h2>
+          <div class="places__place_website">
+            <p class="places__url-heading">URL</p>
             <a
               href="https://poehali.club/na-kolskij-poluostrov-s-national-geographic-rossiya/"
-              class="link place__website_url"
+              class="link places__url"
               >National Geographic</a
             >
-            <!-- Нужно исправить: На теге не может быть класс модификатора без класса блока или элемента, который этим модификатором модифицируется. -->
+            <!-- Нужно исправить: На теге не может быть класс модификатора без класса блока или элемента, который этим модификатором модифицируется. +++corrected-->
           </div>
           <img src="foto/kolsky.jpg" alt="Кольский" class="place__image" />
           <div class="paragraph">
@@ -247,15 +247,15 @@
         </div>
 
         <div class="places__place">
-          <h2 class="title place__title">Алтай</h2>
-          <div class="place__website">
-            <p class="place__website_url-heading">URL</p>
+          <h2 class="title places__title">Алтай</h2>
+          <div class="places__place_website">
+            <p class="places__url-heading">URL</p>
             <a
               href="https://www.facebook.com/altairegion22/"
-              class="link place__website_url"
+              class="link places__url"
               >Facebook</a
             >
-            <!-- Нужно исправить: На теге не может быть класс модификатора без класса блока или элемента, который этим модификатором модифицируется. -->
+            <!-- Нужно исправить: На теге не может быть класс модификатора без класса блока или элемента, который этим модификатором модифицируется.+++corrected -->
           </div>
           <img src="foto/altai.jpg" alt="Алтай" class="place__image" />
           <div class="paragraph">
@@ -276,13 +276,13 @@
         </div>
 
         <div class="places__place">
-          <h2 class="title place__title">Зимний Байкал</h2>
-          <div class="place__website">
-            <p class="place__website_url-heading">URL</p>
-            <a href="https://vk.com/baikalmile" class="link place__website_url"
+          <h2 class="title places__title">Зимний Байкал</h2>
+          <div class="places__place_website">
+            <p class="places__url-heading">URL</p>
+            <a href="https://vk.com/baikalmile" class="link places__url"
               >https://vk.com/baikalmile</a
             >
-            <!-- Нужно исправить: На теге не может быть класс модификатора без класса блока или элемента, который этим модификатором модифицируется. -->
+            <!-- Нужно исправить: На теге не может быть класс модификатора без класса блока или элемента, который этим модификатором модифицируется. +++corrected-->
           </div>
           <img
             src="foto/winter-baikal.jpg"
@@ -306,13 +306,13 @@
         </div>
 
         <div class="places__place">
-          <h2 class="title place__title">Карелия</h2>
-          <div class="place__website">
-            <p class="place__website_url-heading">URL</p>
-            <a href="http://vodlozero.ru/" class="link place__website_url"
+          <h2 class="title places__title">Карелия</h2>
+          <div class="places__place_website">
+            <p class="places__url-heading">URL</p>
+            <a href="http://vodlozero.ru/" class="link places__url"
               >http://vodlozero.ru/</a
             >
-            <!-- Нужно исправить: На теге не может быть класс модификатора без класса блока или элемента, который этим модификатором модифицируется. -->
+            <!-- Нужно исправить: На теге не может быть класс модификатора без класса блока или элемента, который этим модификатором модифицируется. +++corrected-->
           </div>
           <img src="foto/karelia.jpg" alt="Карелия" class="place__image" />
           <div class="paragraph">
@@ -339,7 +339,7 @@
         <div class="video__conteiner">
           <a href="https://vimeo.com/81106671" class="video__item-link">
             <div class="conteiner conteiner__video-item">
-            <!-- Нужно исправить: блок не может быть элементов самого же себя. -->
+              <!-- Нужно исправить: блок не может быть элементов самого же себя. -->
               <img
                 src="foto/icon_play.svg"
                 alt="Иконка Пуск"
@@ -357,7 +357,7 @@
           </a>
           <a href="https://vimeo.com/290675450" class="video__item-link">
             <div class="conteiner conteiner__video-observatory">
-            <!-- Нужно исправить: блок не может быть элементов самого же себя. -->
+              <!-- Нужно исправить: блок не может быть элементов самого же себя. -->
               <img
                 src="foto/icon_play.svg"
                 alt="Иконка Пуск"
@@ -482,10 +482,7 @@
           </div>
         </div>
       </div>
-      <a
-        href="https://stampsy.com/na-elektrichkakh-do-baikala"
-        class="cover"
-      >
+      <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover">
         <h2 class="title cover__title">До Байкала «на собаках»</h2>
         <p class="text cover__subtitle">
           По мотивам учебной темы о Транссибе и iframes — путешествие от столицы
