--- a/index.html
+++ b/index.html
@@ -182,7 +182,8 @@
           -->
           <h2 class="title places__title">Куршская коса</h2>
           <!-- Нужно исправить: здесь title - это элемент блока place. А самого блока place нет =( -->
-          <div class="places__place-website"> <!--откорректировать-->
+          <div class="places__place-website">
+            <!--откорректировать-->
             <!-- Нужно исправить: здесь website - это элемент блока place. А самого блока place нет =( -->
             <p class="places__url-heading">URL</p>
             <a href="http://park-kosa.ru/" class="link places__url"
@@ -529,7 +530,9 @@
       </div>
       <div class="barentsburg">
         <h2 class="title barentsburg__title">Баренцбург</h2>
-        <p class="text barentsburg__coord">78.0648&deg; с.ш. 14.2335&deg; в.д.</p>
+        <p class="text barentsburg__coord">
+          78.0648&deg; с.ш. 14.2335&deg; в.д.
+        </p>
         <!-- можно лучше: для значка градусов тоже есть мнемоник - &deg; +++ исправил-->
         <img src="foto/map.jpg" alt="Фото крты" class="barentsburg__map" />
         <div class="barentsburg__description">
