--- a/index.html
+++ b/index.html
@@ -15,12 +15,6 @@
         <div class="header__lang">
           <a href="#" class="link header__lang header__lang_active">Ru</a>
           <a href="#" class="link header__lang">En</a>
-
-          <!-- Нужно исправить: языки перепутаны местами. +++Исправил-->
-          <!--
-            Надо исправить: 
-            Здесь нужен только один модификатор на выбранном в данный момент языке.+++исправил
-          -->
         </div>
       </header>
       <div class="lead">
@@ -28,6 +22,13 @@
         <h3 class="subtitle lead__subtitle">
           Настоящая страна не в выпусках новостей, а здесь.
         </h3>
+        <!-- 
+          Можно лучше: 
+          Лучше соблюдать иерархию заголовков - например, после h2 может идти или h2 или h3, но не h4, h5 или h6
+          А в данном случае это подзаголовок, а подзаголовки лучше верстать с помощью тега <p>.
+
+          Подробнее про верстку подзаголовков можно почитать в спецификации - https://www.w3.org/TR/html52/common-idioms-without-dedicated-elements.html#subheadings-subtitles-alternative-titles-and-taglines
+        -->
         <img
           src="foto/polka.jpg"
           class="lead__image"
@@ -42,16 +43,6 @@
         </h3>
         <div class="intro__content-row">
           <p class="text  intro__text">
-            <!-- 
-            Нужно исправить: 
-            Ну и простой модификатор применер не по назначению.        +++Простой модификатор, имеется ввиду text? Но он же задаёт стиль общим шрифтам
-            Под простым модификатором имеется ввиду это - intro__content-row_text. ++++исправил
-
-            Простые модификаторы в БЭМ применяются для каких-то бинарных штук. У которых только два состояния.
-            Например, для активного языка в хедере можно использовать простой модификатор _isActive. Т.к. тут может быть только два состояния - язык или активен или нет.
-            Ещё простые модификаторы можно использовать для стилей при ховере (_hovered какой-нибудь). Т.к. тут тоже два только два состояния - элемент или имеет hover или нет.
-            Ну и классический _disabled для инпутов. Тут тоже только два состояния - инпут не может быть чуть-чуть disabled. Он или disabled или нет.
-          -->
             По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только
             36% планируют провести отпуск в родной стране. Мол, чего мы тут,
             дома, не видели? На самом деле, Россия — это целая вселенная с
@@ -64,51 +55,32 @@
             вашего отпуска.
           </p>
           <div class="intro__autor">
-            <!-- 
-            Нужно исправить: 
-            Выше я писал комментарий "На теге не может быть класс модификатора без класса блока или элемента, который этим модификатором модифицируется.", но 
-            забыл добавить, что это нужно исправить по всей работе =( +++Исправил
-
-            Сейчас пройдусь по всей работе и добавлю комментарии рядом со всеми подобными ошибками.
-          -->
             <p class="intro__text-autor">
-              <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор +++Исправил-->
               Автор текста:
               <span class="intro__span-accent"> В.В.Пупкин</span>
             </p>
             <p class="intro__text-autor">
-              <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор +++Исправил-->
               Дата:<span class="intro__span-accent"> 17.06.17</span>
             </p>
           </div>
         </div>
         <ul class="intro__list">
           <li class="intro__list-text">
-            <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор +++Исправил-->
             Часовых поясов<span class="intro__span-accent"> 11</span>
-            <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор +++Исправил-->
           </li>
           <li class="intro__list-text">
-            <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор +++Исправил-->
             Объектов природного наследия ЮНЕСКО
             <span class="intro__span-accent"> 12</span>
-            <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор +++Исправил-->
           </li>
           <li class="intro__list-text">
-            <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор +++Исправил-->
             Объектов культурного наследия ЮНЕСКО
             <span class="intro__span-accent"> 16</span>
-            <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор +++Исправил-->
           </li>
           <li class="intro__list-text">
-            <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор +++Исправил-->
             Природных заповедников <span class="intro__span-accent"> 105</span>
-            <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор +++Исправил-->
           </li>
           <li class="intro__list-text">
-            <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор +++Исправил-->
             Аэропортов <span class="intro__span-accent"> 241</span>
-            <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор +++Исправил-->
           </li>
         </ul>
       </div>
@@ -173,25 +145,20 @@
           alt="Красивая природа России"
           class="photo__grid"
         />
+      <!-- 
+        Просто информация: 
+        Заметил сейчас в стилях блока photo какой-то странный width: 82%.
+        Кажется, что его нужно удалить.
+      -->
       </div>
       <div class="places">
         <div class="places__place">
-          <!-- 
-            Нужно исправить: 
-            отступы между .places__place намного больше, чем в макете. +++исправил
-          -->
           <h2 class="title places__title">Куршская коса</h2>
-          <!-- Нужно исправить: здесь title - это элемент блока place. А самого блока place нет =( -->
           <div class="places__place-website">
-            <!--откорректировать-->
-            <!-- Нужно исправить: здесь website - это элемент блока place. А самого блока place нет =( -->
             <p class="places__url-heading">URL</p>
             <a href="http://park-kosa.ru/" class="link places__url"
               >park-kosa.ru</a
             >
-            <!-- Нужно исправить: здесь website_url-heading - это модификатор элемента website, который в свою очередь является элементом блока place. А самого блока place нет =( +++corrected-->
-            <!-- Нужно исправить: На теге не может быть класс модификатора без класса блока или элемента, который этим модификатором модифицируется. +++corrected-->
-            <!-- Нужно исправить: по макету эта ссылка должна быть подчеркнута постоянно, а не по ховеру.+++исправил -->
           </div>
           <img src="foto/kosa.jpg" alt="Куршская коса" class="place__image" />
           <div class="paragraph">
@@ -209,11 +176,6 @@
               исключает суету, окуная в спокойствие природы и запах стального,
               прохладного моря.
             </p>
-            <!-- 
-              Нужно исправить: 
-              У этих двух параграфов практически идентичные стили. Соответственно эти два параграфа - один и этот же элемент.
-              Чтобы убрать марджин можно использовать :first-child или :last-child. +++исправил
-            -->
           </div>
         </div>
 
@@ -226,7 +188,6 @@
               class="link places__url"
               >National Geographic</a
             >
-            <!-- Нужно исправить: На теге не может быть класс модификатора без класса блока или элемента, который этим модификатором модифицируется. +++corrected-->
           </div>
           <img src="foto/kolsky.jpg" alt="Кольский" class="place__image" />
           <div class="paragraph">
@@ -256,7 +217,6 @@
               class="link places__url"
               >Facebook</a
             >
-            <!-- Нужно исправить: На теге не может быть класс модификатора без класса блока или элемента, который этим модификатором модифицируется.+++corrected -->
           </div>
           <img src="foto/altai.jpg" alt="Алтай" class="place__image" />
           <div class="paragraph">
@@ -283,7 +243,6 @@
             <a href="https://vk.com/baikalmile" class="link places__url"
               >https://vk.com/baikalmile</a
             >
-            <!-- Нужно исправить: На теге не может быть класс модификатора без класса блока или элемента, который этим модификатором модифицируется. +++corrected-->
           </div>
           <img
             src="foto/winter-baikal.jpg"
@@ -313,7 +272,6 @@
             <a href="http://vodlozero.ru/" class="link places__url"
               >http://vodlozero.ru/</a
             >
-            <!-- Нужно исправить: На теге не может быть класс модификатора без класса блока или элемента, который этим модификатором модифицируется. +++corrected-->
           </div>
           <img src="foto/karelia.jpg" alt="Карелия" class="place__image" />
           <div class="paragraph">
@@ -340,31 +298,40 @@
         <div class="video__conteiner">
           <a href="https://vimeo.com/81106671" class="video__item-link">
             <div class="conteiner video__conteiner_item">
-              <!-- Нужно исправить: блок не может быть элементов самого же себя. +++corrected-->
+              <!-- 
+                Нужно исправить: 
+                на теге не может быть модификатор без блока\элемента, который этим модификатором модифицируется.
+                video__conteiner_item - это модификатор элемента video__container. Соответственно этот див должен быть элементом video__container
+              -->
               <img
                 src="foto/icon_play.svg"
                 alt="Иконка Пуск"
                 class="video__item_icon-play"
               />
-              <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор +++corrected-->
+              <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор. Это замечание не исправлено -->
               <div class="item__rect">
                 <p class="item__duration">6:30</p>
                 <h3 class="title item__title">Colors of Kamchatka</h3>
                 <p class="subtitle item__subtitle">
                   Director: Pavel Karykhalin
                 </p>
+              <!-- 
+                Нужно исправить: 
+                В этом диве несколько элементов блока item, но самого блока item на странице нет.
+                Это ошибка по БЭМ. Во втором видео эта ошибка повторяется.
+              -->
               </div>
             </div>
           </a>
           <a href="https://vimeo.com/290675450" class="video__item-link">
             <div class="conteiner video__conteiner_observatory">
-              <!-- Нужно исправить: блок не может быть элементов самого же себя. +++corrected-->
+              <!-- Нужно исправить: Здесь проблема из первого видео повторяется. -->
               <img
                 src="foto/icon_play.svg"
                 alt="Иконка Пуск"
                 class="video__item_icon-play"
               />
-              <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор +++corrected-->
+              <!-- Нужно исправить: Здесь проблема из первого видео повторяется. -->
               <div class="item__rect">
                 <p class="item__duration">24:45</p>
                 <h3 class="title item__title">Обсерватория | Observatory</h3>
@@ -374,12 +341,6 @@
               </div>
             </div>
           </a>
-          <!-- Нужно исправить: у видео-карточек в макете скруглены углы. +++исправил-->
-          <!-- 
-            Нужно исправить:
-            При затемнении фона текст и иконка должены оставаться белыми.
-            Затемнение лучше делать с помощью псевдоэлементов (::before или ::after) +++исправил... да уж... жесть
-          -->
         </div>
       </div>
       <div class="additional">
@@ -425,10 +386,9 @@
             </p>
           </div>
           <!-- 
-            Нужно исправить: 
-            Картинки в этой секции должны быть затемнены.
-            Текст при этом должен оставаться белым.
-            Затемнение лучше делать с помощью псевдоэлементов (::before или ::after) ++++ немного пошёл по другому пути, но исправил
+            Просто информация:
+            Это не ошибка, но предположу, что элементы item-nvr, item-arak и т.д. задумывались как модификаторы.
+            А сейчас это элементы.
           -->
         </div>
       </div>
@@ -442,6 +402,7 @@
         </h3>
         <div class="comments__container">
           <div class="container__comment">
+          <!-- Нужно исправить: container__comment - это элемент блока container, а самого блока container на странице нет. Это ошибка по БЭМ. В остальных комментариях эта ошибка повторяется. -->
             <img
               src="foto/lyagushkin.jpg"
               alt="Фотография Лягушкина"
@@ -452,6 +413,11 @@
               выгляньте “наружу”…»
             </p>
             <p class="comment__author">Виктор Лягушкин</p>
+          <!-- 
+            Нужно исправить: 
+            В этом диве несколько элементов блока comment, но самого блока comment на странице нет.
+            Это ошибка по БЭМ. В остальных комментариях эта ошибка повторяется.
+          -->
           </div>
 
           <div class="container__comment">
@@ -489,10 +455,6 @@
           По мотивам учебной темы о Транссибе и iframes — путешествие от столицы
           до Байкала на электричках.
         </p>
-        <!-- Нужно исправить: у h3 жирность шрифта не по макету.+++ corrected -->
-        <!-- Нужно исправить: при ховере фон должен затемняться, а текст должен оставаться белым. +++corrected-->
-        <!-- Нужно исправить: ну и underline у текста быть не должно. +++corrected-->
-        <!-- Можно лучше: кажется, что h3 здесь это не заголовок, а параграф. corrected-->
       </a>
       <div class="emblem">
         <h2 class="title emblem__title">
@@ -502,6 +464,8 @@
           <div class="emblem__item">
             <img src="foto/nvg.png" alt="Герб Новгорода" class="item__image" />
             <p class="item__city">Великий Новгород</p>
+            <!-- Нужно исправить: item__image и item__city - это элементы блока item, а самого блока item на странице нет. 
+              Это ошибка по БЭМ. В остальных гербах эта ошибка повторяется. -->
           </div>
           <div class="emblem__item">
             <img src="foto/rostov.png" alt="Герб Ростова" class="item__image" />
@@ -518,22 +482,18 @@
               class="item__image"
             />
             <p class="item__city">Елабуга</p>
-            <!-- Нужно исправить: по макету у герба Елабуги под деревом нет белого фона. +++исправил -->
           </div>
           <div class="emblem__item">
             <img src="foto/perm.png" alt="Герб Перьми" class="item__image" />
-            <!-- Нужно исправить: альт не закрыт -  corrected-->
             <p class="item__city">Пермь</p>
           </div>
         </div>
-        <!-- Нужно исправить: отступ между первым гербом и текстом по макету, а у остальных гербов отступ больше, чем в макете.  +++исправил-->
       </div>
       <div class="barentsburg">
         <h2 class="title barentsburg__title">Баренцбург</h2>
         <p class="text barentsburg__coord">
           78.0648&deg; с.ш. 14.2335&deg; в.д.
         </p>
-        <!-- можно лучше: для значка градусов тоже есть мнемоник - &deg; +++ исправил-->
         <img src="foto/map.jpg" alt="Фото крты" class="barentsburg__map" />
         <div class="barentsburg__description">
           <p class="text barentsburg__description-text">
@@ -547,12 +507,14 @@
               class="link description__link"
               >Умереть или родиться здесь практически невозможно</a
             >
+            <!-- Нужно исправить: description__url-heading и description__link - это элементы блока description, а самого блока description на странице нет. 
+              Это ошибка по БЭМ. -->
+
           </div>
         </div>
       </div>
       <footer class="footer">
         <p class="text footer__text-copyright">&copy; 2020. Олег Черняков</p>
-        <!-- Нужно исправить: блок не может быть элементом самого себя =( +++corrected-->
         <ul class="footer__list">
           <li>
             <a
@@ -604,21 +566,16 @@
   БЭМ штука не простая, да. Но разобраться с ним нужно, т.к. он применятся буквально везде. Чуть ли не на каждом сайте.
   Если сделать правильную nested структуру папок и файлов по БЭМ, то это тоже поможет лучше понять БЭМ.  ++++структуру папок (переименование) черех vs code не могу сделать((( программа зависает... пожалуйста, в следующей работе учту
 
+  Про структуру папок это просто рекомендация.
+
 
   Можно лучше:
-  - Структура папок не самая лучшая. В папке pages лежат некоторые блоки. Файлов в которых подключаются шрифты 2 штуки. 
-    Хорошо бы один из них удалить, чтобы не путал.
-
-    ++++ не совсем понял. У меня же шрифты поключаются в вендере
-    В vendor у вас сейчас два .css файла - inter.css и font.css. Один из них явно лишний. +++исправил
-
+  - Структура папок не самая лучшая.
   - Если просто скопировать из фигмы все отступы, размеры шрифтов, высоты строк и всё прочее, то на выходе работа всё равно будет отличаться от того, что нарисовано в фигме.
     Чтобы проверить насколько ваша работа на самом деле отличается от того, что нарисовано в фигме можно воспользоваться плагином для хрома - https://chrome.google.com/webstore/detail/perfectpixel-by-welldonec/dkaagdgjmgdmbnecmcefdhjekcoceebi
 
   Нужно исправить:
-  - Стили нужно иcправить так, чтобы не было белых полей и чтобы вся страница имела такой же фон, как и контент. <- забыл это написать при первой проверке >.<
   - Все "Нужно исправить"
-
 
 
   Всегда используйте валидатор для самопроверки верстки https://validator.w3.org/#validate_by_input
