Дальше делаю ветку для устранения замечаний

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       </header>
       <div class="lead">
         <h1 class="title lead__title">Путешествия по России</h1>
-        <h3 class="subtitle lead__subtitle">
+        <p class="subtitle lead__subtitle">
           Настоящая страна не в выпусках новостей, а здесь.
-        </h3>
+        </p>
         <!-- 
           Можно лучше: 
           Лучше соблюдать иерархию заголовков - например, после h2 может идти или h2 или h3, но не h4, h5 или h6
@@ -148,7 +148,7 @@
       <!-- 
         Просто информация: 
         Заметил сейчас в стилях блока photo какой-то странный width: 82%.
-        Кажется, что его нужно удалить.
+        Кажется, что его нужно удалить.+++ можно не буду? Он задаёт ширину
       -->
       </div>
       <div class="places">
